tests/ui/matrix.stderr
error: no rules expected the token `,`
 --> tests/ui/matrix.rs:7:21
  |
7 |     let _ = matrix!(,);
  |                     ^ no rules expected this token in macro call

error: no rules expected the token `,`
 --> tests/ui/matrix.rs:8:38
  |
8 |     let _ = matrix!( [1, 2], [3, 4], ,);
  |                                      ^ no rules expected this token in macro call
